# subconverter-rs

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  THIRD_PARTY.md  wrangler.toml
.github/workflows/: ci.yml  release.yml
crates/subconverter-cli/: Cargo.toml
crates/subconverter-cli/src/: main.rs
crates/subconverter-core/: Cargo.toml
crates/subconverter-core/src/: config.rs  convert.rs  error.rs  io.rs  lib.rs  model.rs  routes.rs  rules.rs  template.rs  util.rs
crates/subconverter-core/tests/: compat.rs  golden.rs  scripts.rs
crates/subconverter-server/: Cargo.toml
crates/subconverter-server/src/: main.rs  service.rs  windows_service_host.rs
crates/subconverter-worker/: Cargo.toml
crates/subconverter-worker/src/: lib.rs
docs/: COMPATIBILITY.md  MIGRATION.md  SERVICES.md
tests/fixtures/: README.md  capabilities.toml  cases.full.toml  cases.toml  reference.toml
tests/fixtures/config/: minimal.ini
tests/fixtures/golden/: ss.clash.yml
tests/fixtures/golden/full/: protocols.clash.yml  protocols.mixed.txt  protocols.singbox.json  protocols.surge-v4.conf  ss.clash.yml  ss.loon.conf  ss.mellow.conf  ss.quan.conf  ss.quanx.conf  ss.singbox.json  ss.ss.txt  ss.ssd.txt  ss.sssub.txt  ss.surfboard.conf  ss.surge-v2.conf  ss.surge-v3.conf
tests/fixtures/input/: protocols.txt  protocols.yml  ss.txt
tests/fixtures/reference/: pref.ini
tools/: build-cpp-subconverter.ps1  check-core-std-targets.ps1  deploy-worker.ps1  generate-golden.ps1  generate-worker-config.ps1  smoke-container.ps1  smoke-server.ps1  smoke-service.ps1  verify.ps1
