[package]
name = "subconverter-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "subconverter"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset"] }
subconverter-core = { path = "../subconverter-core", features = ["quickjs"] }
tokio.workspace = true
