[package]
name = "subconverter-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
quickjs = ["dep:rquickjs"]

[dependencies]
async-trait.workspace = true
base64.workspace = true
http.workspace = true
percent-encoding.workspace = true
regex.workspace = true
rquickjs = { version = "0.12", optional = true }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
toml.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true
