[package]
name = "subconverter-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "subconverter-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = "0.7"
chrono = "0.4"
clap.workspace = true
cron = "0.17"
http.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "json"] }
serde_json.workspace = true
service-manager = "0.11"
subconverter-core = { path = "../subconverter-core", features = ["quickjs"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(windows)'.dependencies]
tracing-appender = "0.2"
windows-service = "0.8"

[dev-dependencies]
tempfile = "3"
